--- a/docker-compose.airflow-simple.yml
+++ b/docker-compose.airflow-simple.yml
@@ -4,7 +4,7 @@ services:
     container_name: airflow-postgres
     environment:
       - POSTGRES_USER=airflow
-      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_PASSWORD=airflow #
       - POSTGRES_DB=airflow
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U airflow"]
